@@ -5,6 +5,9 @@ import kr.polytech.lms.statistics.kosis.client.dto.KosisPopulationRow;
 import kr.polytech.lms.statistics.kosis.persistence.KosisPopulation;
 import kr.polytech.lms.statistics.kosis.persistence.KosisPopulationId;
 import kr.polytech.lms.statistics.kosis.persistence.KosisPopulationRepository;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
+import org.springframework.scheduling.annotation.Scheduled;
 import org.springframework.stereotype.Service;
 import org.springframework.util.StringUtils;
 
@@ -12,10 +15,13 @@ import java.io.IOException;
 import java.time.Year;
 import java.util.Collection;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 public class KosisStatisticsService {
     // 왜: 컨트롤러는 요청/응답에 집중하고, 비즈니스 규칙(기본값/검증)은 서비스로 분리합니다.
+
+    private static final Logger log = LoggerFactory.getLogger(KosisStatisticsService.class);
 
     private final KosisClient kosisClient;
     private final KosisPopulationRepository kosisPopulationRepository;
@@ -48,6 +54,31 @@ public class KosisStatisticsService {
         return fetched;
     }
 
+    @Scheduled(cron = "0 0 3 * * *", zone = "Asia/Seoul") // 매일 오전 3시 (한국 시간)
+    public void refreshKosisPopulationCache() {
+        log.info("KOSIS 인구 통계 캐시 갱신 시작 (스케줄러)");
+        try {
+            // 기본 파라미터로 데이터를 가져와 캐시를 갱신합니다.
+            // 실제 구현 시에는 갱신이 필요한 다양한 연도, 연령대, 성별, 행정구역 코드를 순회해야 합니다.
+            String year = String.valueOf(Year.now().getValue()); // 현재 연도
+            String ageType = resolveAgeType(null); // 기본 연령대 (20대=32)
+            String gender = resolveGender(null);   // 기본 성별 (전체=0)
+            String admCd = resolveAdmCd(null);     // 전체 행정구역 (null)
+
+            List<KosisPopulationRow> fetched = kosisClient.fetchPopulation(year, ageType, gender, admCd);
+            if (!fetched.isEmpty()) {
+                // 기존 데이터 삭제 후 새로 저장 (간단한 갱신 방식)
+                kosisPopulationRepository.deleteAll();
+                savePopulationToCache(year, ageType, gender, fetched);
+                log.info("KOSIS 인구 통계 캐시 갱신 완료: {}건", fetched.size());
+            } else {
+                log.warn("KOSIS 인구 통계 캐시 갱신 실패: 조회된 데이터 없음");
+            }
+        } catch (Exception e) {
+            log.error("KOSIS 인구 통계 캐시 갱신 중 오류 발생", e);
+        }
+    }
+
     private List<KosisPopulationRow> findPopulationFromCache(String year, String ageType, String gender, String admCd) {
         // 왜: 레거시와 동일하게 "DB에 있으면 DB 우선"으로 외부 API 호출을 줄입니다.
         List<KosisPopulation> entities = (StringUtils.hasText(admCd))
@@ -64,7 +95,7 @@ public class KosisStatisticsService {
 
         List<KosisPopulation> entities = rows.stream()
                 .map(row -> toEntity(year, ageType, gender, row))
-                .toList();
+                .collect(Collectors.toList()); // Use Collectors.toList() for mutable list
 
         kosisPopulationRepository.saveAll(entities);
     }
@@ -93,7 +124,7 @@ public class KosisStatisticsService {
     private String resolveYear(String year) {
         // 왜: 기본 화면 기본값을 2024로 고정해 혼선을 줄입니다.
         if (!StringUtils.hasText(year)) {
-            return "2024";
+            return String.valueOf(Year.now().getValue()); // 현재 연도로 변경
         }
         return year.trim();
     }
